[package]
name = "username-blocklist"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro.pezzato@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "http://github.com/alepez/username-blocklist-rs"
description = "An opinionated blacklist of words that you might not like to see used as usernames in your service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
